@@ -4,6 +4,7 @@ $Id$
 	os_freebsd.cpp: adding handling of SCSI devices exported with mfip
 	driver. FreeBSD changing PDT code to 0x1f and we are changing it back
 	to 0x00 (direct-access block device).
+	os_freebsd.cpp: improved error handling for the ATA devices
 
 2012-11-04  Christian Franke  <franke@computer.org>
 
